[package]
name = "timestamped-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.145"
tokio = { version = "1.29.1", features = ["net", "time"] }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
clock-steering = { git = "https://github.com/pendulum-project/clock-steering.git", rev = "46974d35e30d9cf1dc0caef7bac71fda478b8efa" }
serde = { version = "1.0.145", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }

[features]
default = ["std", "serde"]
std = []
