[package]
name = "timestamped-socket"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.145"
tokio = { version = "1.29.1", features = ["net", "time"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "log"] }
serde = { version = "1.0.145", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt", "macros"] }

[features]
default = ["std", "serde"]
std = []
