[package]
name = "timestamped-socket"
description = "Implementation of async UDP and raw ethernet sockets with timestamping"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pendulum-project/timestamped-socket"
homepage = "https://github.com/pendulum-project/timestamped-socket"
publish = true
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.145"
tokio = { version = "1.29.1", features = ["net", "time"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "log"] }
serde = { version = "1.0.145", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[features]
default = ["serde"]
